# support-bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3de147b35e89_fix_telegram_ids.py  559d3cc36e6e_first_commit.py
app/bot/: filter_media.py  get_reports.py  handlers_commands.py  handlers_messages.py  main.py  utils.py
app/core/: base.py  config.py  db.py
app/crud/: base.py  message.py  user.py
app/models/: __init__.py  message.py  user.py
app/schemas/: message.py  user.py
